# jit-music

./: .gitignore  Cargo.toml  planning.md  readme.md  tracker.py
models/: credits.md
src/: audio.rs  camera.rs  gesture.rs  main.rs  tracking.rs
