[package]
name = "jit-music"
version = "0.1.0"
edition = "2024"

[dependencies]
# for getting the camera stuff
nokhwa = { version = "0.10", features = ["input-native"]}

# for image manip
image = "0.25.10"

# audio
cpal = "0.17.3"

# ui

eframe = "0.34.1"
egui = "0.34.1"

serde_json = "1"
base64 = "0.22"

[profile.release]
opt-level = 3
